<resources>
    <string name="app_name">App_Pianov2</string>
    <string name="action_settings">Settings</string>
    <string name="TitleMenu">Harmony Generator</string>
    <string name="title_activity_theme1">Sad</string>
    <string name="title_activity_theme2">Energic</string>
    <string name="title_activity_theme3">Epic</string>
    <string name="title_activity_theme4">Relaxed</string>
    <string name="Theme1">SAD</string>
    <string name="Theme2">ENERGIC</string>
    <string name="PianoVisu">Soundbox</string>
    <string name="Theme3">EPIC</string>
    <string name="Theme4">RELAXED</string>
    <string name="title_activity_act2">act2</string>
    <string name="Titlethm1">Feeling Sad</string>
    <string name="Titlethm2">Feeling Energic</string>
    <string name="Titlethm3">Feeling Strong</string>
    <string name="Titlethm4">Feeling Restored</string>
</resources>
